Hive Plugins: Add Hive Batch Source