@@ -29,6 +29,7 @@
     <module>hdfs-plugins</module>
     <module>transform-plugins</module>
     <module>kafka-plugins</module>
+    <module>hive-plugins</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -66,6 +67,7 @@
     <apache-commons.version>1.2</apache-commons.version>
     <commons-codec.version>1.10</commons-codec.version>
     <snappy.version>1.1.2</snappy.version>
+    <hive.version>1.1.0-cdh5.4.5</hive.version>
     <surefire.redirectTestOutputToFile>true</surefire.redirectTestOutputToFile>
   </properties>
 
@@ -388,112 +390,17 @@
           <target>1.7</target>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.14.1</version>
-        <configuration>
-          <argLine>-Xmx5000m -Djava.awt.headless=true -XX:MaxPermSize=1024m -XX:+UseConcMarkSweepGC -XX:OnOutOfMemoryError="kill -9 %p" -Djava.net.preferIPv4Stack=true</argLine>
-          <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
-          <reuseForks>false</reuseForks>
-          <reportFormat>plain</reportFormat>
-          <systemPropertyVariables>
-            <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
-          </systemPropertyVariables>
-          <includes>
-            <include>**/*TestsSuite.java</include>
-            <include>**/*TestSuite.java</include>
-            <include>**/Test*.java</include>
-            <include>**/*Test.java</include>
-            <include>**/*TestCase.java</include>
-          </includes>
-          <excludes>
-            <exclude>**/*TestRun.java</exclude>
-          </excludes>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.maven.surefire</groupId>
-            <artifactId>surefire-junit47</artifactId>
-            <version>2.14</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.rat</groupId>
-        <artifactId>apache-rat-plugin</artifactId>
-        <version>0.10</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.maven.doxia</groupId>
-            <artifactId>doxia-core</artifactId>
-            <version>1.6</version>
-            <exclusions>
-              <exclusion>
-                <groupId>xerces</groupId>
-                <artifactId>xercesImpl</artifactId>
-              </exclusion>
-            </exclusions>
-          </dependency>
-        </dependencies>
-        <executions>
-          <execution>
-            <id>rat-check</id>
-            <phase>validate</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <excludes>
-                <exclude>LICENSE*.txt</exclude>
-                <!-- This file should be not be there, but I am excluding it for now -->
-                <exclude>*.rst</exclude>
-                <exclude>*.md</exclude>
-                <exclude>**/*.cdap</exclude>
-                <exclude>**/*.yaml</exclude>
-                <exclude>**/*.md</exclude>
-                <exclude>logs/**</exclude>
-                <exclude>.git/**</exclude>
-                <exclude>.idea/**</exclude>
-                <exclude>**/grok/patterns/**</exclude>
-                <exclude>conf/**</exclude>
-                <exclude>data/**</exclude>
-                <exclude>plugins/**</exclude>
-                <exlcude>**/*.patch</exlcude>
-                <exclude>**/logrotate.d/**</exclude>
-                <exclude>**/limits.d/**</exclude>
-                <exclude>**/*.json</exclude>
-                <exclude>**/*.json.template</exclude>
-                <exclude>**/MANIFEST.MF</exclude>
-              </excludes>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.12.1</version>
-        <executions>
-          <execution>
-            <id>validate</id>
-            <phase>process-test-classes</phase>
-            <configuration>
-              <configLocation>checkstyle.xml</configLocation>
-              <suppressionsLocation>suppressions.xml</suppressionsLocation>
-              <encoding>UTF-8</encoding>
-              <consoleOutput>true</consoleOutput>
-              <failsOnError>true</failsOnError>
-              <includeTestSourceDirectory>true</includeTestSourceDirectory>
-              <excludes>**/org/apache/cassandra/**</excludes>
-            </configuration>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
 
+  <profiles>
+    <profile>
+      <id>default</id>
+      <modules>
+        <module>cassandra-plugins</module>
+        <module>elasticsearch-plugins</module>
+        <module>hive-plugins</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
